Chris - DevOrg/src/objects/Project__c.object
<CustomObject>
    <description>Projects for Time Tracking</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_Worked__c</fullName>
        <description>Rollup of hours applied to project in time cards</description>
        <label>Actual Hours Worked</label>
        <summarizedField>Time_Card__c.Hours_Worked__c</summarizedField>
        <summaryForeignKey>Time_Card__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>Actual Start Date for a Project</description>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Curent_Completion_Date__c</fullName>
        <description>Current completion date</description>
        <label>Current Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_remaining_on_Project__c</fullName>
        <description>Number of days remaining until most current estimated completion date</description>
        <formula>Curent_Completion_Date__c - TODAY()</formula>
        <label>Days remaining on Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Project Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_Remaining__c</fullName>
        <description>Estimated hours remaining.  This is a roll-up summary of remaining hours estimated through time cards for a particular project</description>
        <label>Estimated Hours Remaining</label>
        <summarizedField>Project_Resource__c.Estimated_Hours_Remaining__c</summarizedField>
        <summaryForeignKey>Project_Resource__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Completion_Date__c</fullName>
        <description>Original Project Completion Date</description>
        <label>Original Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Parent Project</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Projected_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Project Start Date</description>
        <label>Projected Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_Start_Date__c</fullName>
        <description>Updated Start Date for a project</description>
        <label>Revised Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sponsor of the project</description>
        <label>Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teams__c</fullName>
        <label>Teams</label>
        <picklist>
            <picklistValues>
                <fullName>Data Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Governance and Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDM Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <description>Total Estimated Hours needed to complete the project.  This field is a roll-up summary of all Resource requirements for a project</description>
        <label>Total Estimated Hours</label>
        <summarizedField>Project_Resource__c.Estimated_Hours__c</summarizedField>
        <summaryForeignKey>Project_Resource__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unplanned_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project has not been on-boarded through the Project Management Office</description>
        <label>Unplanned Project</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Active_Projects_non_Admin</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_Hours_Worked__c</columns>
        <columns>Estimated_Hours_Remaining__c</columns>
        <columns>Original_Completion_Date__c</columns>
        <columns>Curent_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Project_Category__c</field>
            <operation>notEqual</operation>
            <value>Support Effort,Administrative</value>
        </filters>
        <label>Active Projects (non-Admin)</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Projected_Start_Date__c</columns>
        <columns>Original_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>